<package>
  <name>patrolbot_teleop</name>
  <version>0.0.1</version>
  <description>Provides teleoperation using joysticks or keyboard.</description>
  <maintainer email="mwise@willowgarage.com">Melonee Wise</maintainer>
  <license>BSD</license>
  
  <author email="efeoflus@andrew.cmu.edu">Eduardo Feo-Flushing</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>
  <!--<run_depend>kobuki_safety_controller</run_depend>-->
  <run_depend>yocs_velocity_smoother</run_depend>
  <!--<run_depend>turtlebot_bringup</run_depend>-->
</package>
